fixed alignment issue in left side
fixed property name in stylesheet

--- a/style.css
+++ b/style.css
@@ -25,7 +25,6 @@
     align-items: center;
 }
 .left-side{ 
-    
     background-image: url(/assets/leaves.avif);
     background-size: cover;
     height: 100vh;
@@ -38,10 +37,11 @@
     height:150px;
     display: flex;
     align-items: center;
-    justify-items: center;
+    justify-content: center;
     background-color: hsla(0, 0%, 0%, 50%);
     width: 100%;
     padding: 15px 0px;
+
 }
 .logo-container > img {
     height: 100%;
